style(app): add base background color

--- a/src/app.css
+++ b/src/app.css
@@ -21,6 +21,7 @@
 body {
   padding: var(--appSpacing);
   font-family: "Roboto", sans-serif, Arial;
+  background-color: var(--backgroundColor);
 }
 
 #app {
