--- a/src/app.css
+++ b/src/app.css
@@ -54,3 +54,60 @@ button {
   background-color: transparent;
   color: var(--primaryColor);
 }
+
+/* Form */
+form {
+  position: relative;
+  width: 100%;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: var(--appSpacing);
+}
+
+.input-group {
+  display: flex;
+  flex-direction: column;
+  gap: calc(var(--appSpacing) / 2);
+}
+
+label {
+  text-transform: capitalize;
+}
+
+input,
+textarea,
+select {
+  padding: 1rem;
+  border-radius: 5px; /* consider using theme */
+  border: 1px solid var(--secondaryColor);
+  background-color: var(--foregroundColor);
+  width: 100%;
+}
+
+textarea {
+  resize: none;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  appearance: textfield;
+}
+
+.submit-btn {
+  padding: 1rem;
+  cursor: pointer;
+  border: none;
+  border-radius: 5px;
+  color: var(--backgroundColor);
+  background-color: var(--primaryColor);
+  margin-top: auto;
+  font-weight: bold;
+}
