--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -39,4 +39,39 @@ button {
   color: #f0758d;
 }
 
+.form {
+  position: relative;
+  width: 100%;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1.2rem;
+}
+.form .input-group {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.form label {
+  text-transform: capitalize;
+}
+.form input,
+.form textarea,
+.form select {
+  padding: 1rem;
+  border-radius: 10px;
+  border: 1px solid #7aa5f1;
+  background-color: #ffffff;
+}
+.form textarea {
+  resize: none;
+}
+.form input[type=number] {
+  appearance: textfield;
+}
+.form .submit-btn {
+  margin-top: auto;
+  font-weight: bold;
+}
+
 /*# sourceMappingURL=app.css.map */
