--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -46,11 +46,15 @@ button {
   display: flex;
   flex-direction: column;
   gap: 1.2rem;
+  justify-content: start;
+  align-items: start;
 }
 .form .input-group {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  justify-content: start;
+  align-items: start;
 }
 .form label {
   text-transform: capitalize;
