--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,14 +1,30 @@
+#navbar, #mobile-navbar {
+  display: flex;
+  flex-direction: row;
+  gap: 0;
+  justify-content: space-between;
+  align-items: center;
+}
+
 #navbar {
+  width: 100%;
+  height: 72px;
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 72px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 1.2rem;
+  padding: 0 1.2rem;
   z-index: 100;
+}
+
+#mobile-navbar {
+  width: 100%;
+  height: 48px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  padding: 0 1.2rem;
+  z-index: 100;
+  background-color: #fff;
 }
 
 /*# sourceMappingURL=navbar.css.map */
