style: restyle core component with SASS

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -7,12 +7,19 @@ $accentColor: #508cf8;
 $dangerColor: #f0758d;
 $foregroundColor: #ffffff;
 $bgColor: #f9fbfd;
+$textColor: #202020;
+$secondaryTextColor: #bbb;
 
 // font
 $fontStack: "Roboto", sans-serif, Arial;
+$mainTitle: 1.5rem;
+$contentTitle: 1.2rem;
 
 // dimensions
 $radius: 10px;
 
 // buttons
 $paddingSpace: 0.5rem 1rem;
+
+// panel
+$panelTitleSize: 0.8rem;
