style: restyle pages with SASS

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -163,6 +163,7 @@ button {
 
 .record {
   @include utils.flex($justify: space-between, $align: center);
+  width: 100%;
   cursor: pointer;
   padding: 0.8rem 0;
 
